scroll animation working; fix some issues with overflow

--- a/src/app/modules/core/about/about.component.scss
+++ b/src/app/modules/core/about/about.component.scss
@@ -5,6 +5,11 @@
     width: 100vw;
     height: 100%;
     color: $primary-color;
+    display: flex;
+    justify-content: center;
+    .about__main{
+        width:80%; 
+    }
 
     p{
         margin:0;
