--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,9 @@ body {
     margin: 0;
     padding: 0;
 }
+html{
+  overflow-y: scroll;
+}
 body {
     font-family: "M PLUS 2", sans-serif;
     margin: 0;
